--- a/Sentimental_Analiziz.ipynb
+++ b/Sentimental_Analiziz.ipynb
@@ -1074,12 +1074,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***APPLYING VADOR MODEL***\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uEplGaJbElWC"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN42VX3IIS6W0CpW5ks5YgW",
+      "authorship_tag": "ABX9TyMz/zN20fvecuXuWyuUzVK0",
       "include_colab_link": true
     },
     "kernelspec": {
