Created using Collab

--- a/Sentimental_Analiziz.ipynb
+++ b/Sentimental_Analiziz.ipynb
@@ -1085,12 +1085,52 @@
       "metadata": {
         "id": "uEplGaJbElWC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+        "from tqdm.notebook import tqdm\n",
+        "\n",
+        "sia = SentimentIntensityAnalyzer()"
+      ],
+      "metadata": {
+        "id": "O4ZItWU-G11R"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sia.polarity_scores('i like donut')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JFG5E3aQHUM6",
+        "outputId": "75791c50-de67-4204-dd83-70b4fa1fcc6c"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'neg': 0.0, 'neu': 0.286, 'pos': 0.714, 'compound': 0.3612}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMz/zN20fvecuXuWyuUzVK0",
+      "authorship_tag": "ABX9TyOifjUfFi/Ent3iw5uOQq4Y",
       "include_colab_link": true
     },
     "kernelspec": {
