--- a/Sentimental_Analiziz.ipynb
+++ b/Sentimental_Analiziz.ipynb
@@ -978,54 +978,6 @@
       ]
     },
     {
-      "source": [
-        "import nltk\n",
-        "\n",
-        "# Download the required NLTK data package\n",
-        "nltk.download('maxent_ne_chunker')\n",
-        "\n",
-        "# Now, try using ne_chunk again\n",
-        "entities = nltk.chunk.ne_chunk(tagged)\n",
-        "entities.pprint()"
-      ],
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 755
-        },
-        "id": "SAGmNhLi4v8V",
-        "outputId": "35906482-c5a0-4691-9c5c-c945bb87653c"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package maxent_ne_chunker to\n",
-            "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "LookupError",
-          "evalue": "\n**********************************************************************\n  Resource \u001b[93mmaxent_ne_chunker_tab\u001b[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001b[31m>>> import nltk\n  >>> nltk.download('maxent_ne_chunker_tab')\n  \u001b[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001b[93mchunkers/maxent_ne_chunker_tab/english_ace_multiclass/\u001b[0m\n\n  Searched in:\n    - '/root/nltk_data'\n    - '/usr/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-bfc14142de95>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Now, try using ne_chunk again\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mentities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mne_chunk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtagged\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mentities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/nltk/chunk/__init__.py\u001b[0m in \u001b[0;36mne_chunk\u001b[0;34m(tagged_tokens, binary)\u001b[0m\n\u001b[1;32m    190\u001b[0m         \u001b[0mchunker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mne_chunker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"binary\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 192\u001b[0;31m         \u001b[0mchunker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mne_chunker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mchunker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtagged_tokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/nltk/chunk/__init__.py\u001b[0m in \u001b[0;36mne_chunker\u001b[0;34m(fmt)\u001b[0m\n\u001b[1;32m    172\u001b[0m     \u001b[0mLoad\u001b[0m \u001b[0mNLTK\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0ms\u001b[0m \u001b[0mcurrently\u001b[0m \u001b[0mrecommended\u001b[0m \u001b[0mnamed\u001b[0m \u001b[0mentity\u001b[0m \u001b[0mchunker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m     \"\"\"\n\u001b[0;32m--> 174\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mMaxent_NE_Chunker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/nltk/chunk/named_entity.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, fmt)\u001b[0m\n\u001b[1;32m    327\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    328\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fmt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfmt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 329\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_tab_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"chunkers/maxent_ne_chunker_tab/english_ace_{fmt}/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    330\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/nltk/data.py\u001b[0m in \u001b[0;36mfind\u001b[0;34m(resource_name, paths)\u001b[0m\n\u001b[1;32m    577\u001b[0m     \u001b[0msep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"*\"\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m     \u001b[0mresource_not_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"\\n{sep}\\n{msg}\\n{sep}\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mLookupError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresource_not_found\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    580\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    581\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mLookupError\u001b[0m: \n**********************************************************************\n  Resource \u001b[93mmaxent_ne_chunker_tab\u001b[0m not found.\n  Please use the NLTK Downloader to obtain the resource:\n\n  \u001b[31m>>> import nltk\n  >>> nltk.download('maxent_ne_chunker_tab')\n  \u001b[0m\n  For more information see: https://www.nltk.org/data.html\n\n  Attempted to load \u001b[93mchunkers/maxent_ne_chunker_tab/english_ace_multiclass/\u001b[0m\n\n  Searched in:\n    - '/root/nltk_data'\n    - '/usr/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/share/nltk_data'\n    - '/usr/local/share/nltk_data'\n    - '/usr/lib/nltk_data'\n    - '/usr/local/lib/nltk_data'\n**********************************************************************\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "***APPLYING VADOR MODEL***\n",
@@ -2352,7 +2304,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# NOW WE ARE USING RoBERTa (Robustly Optimized BERT Pretraining Approach) is a pretrained transformer model for natural language processing. It builds upon BERT by optimizing training strategies, including:\n",
+        "#USING RoBERTa (Robustly Optimized BERT Pretraining Approach) is a pretrained transformer model for natural language processing. It builds upon BERT by optimizing training strategies, including:\n",
         "\n",
         "Larger Training Data: Trained on more diverse and larger datasets.\n",
         "No Next Sentence Prediction (NSP): NSP task from BERT is removed, focusing solely on masked language modeling.\n",
@@ -2384,8 +2336,6 @@
         "model = AutoModelForSequenceClassification.from_pretrained(MODEL)"
       ],
       "metadata": {
-        "id": "ojH0U3_efvwO",
-        "outputId": "279fca8c-6d26-400f-d848-9501e412840c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177,
@@ -2446,7 +2396,9 @@
             "ef76348b3de04d4783e66ed6482f372c",
             "d636e35dfa5c4dada4031920a8cc3a5b"
           ]
-        }
+        },
+        "id": "ojH0U3_efvwO",
+        "outputId": "279fca8c-6d26-400f-d848-9501e412840c"
       },
       "execution_count": 30,
       "outputs": [
@@ -2532,11 +2484,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "RfwPoll-n_S9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#ROBERTA\n",
-        "encoded_text = tokenizer(sample, return_tensors='pt')\n",
-        "output = model(**encoded_text)\n",
+        "encoded_text = tokenizer(sample, return_tensors='pt') #sample is the input text\n",
+        "output = model(**encoded_text)                        # pass the tokenized data to the model\n",
         "scores = output[0][0].detach().numpy()\n",
         "scores = softmax(scores)\n",
         "scores_dict = {\n",
@@ -2546,16 +2505,16 @@
         "}\n",
         "print(scores_dict)\n",
         "\n",
-        "#tokenizer convert text --> tokensIDs creating attention marks\n"
+        "\n"
       ],
       "metadata": {
-        "id": "abOUpjjsggQN",
-        "outputId": "3e19fedd-58df-49ef-de55-acdbc5c19be1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "abOUpjjsggQN",
+        "outputId": "0b61c053-4fc5-45db-b73a-4fb0cea188bf"
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -2565,6 +2524,44 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# wht I done ..>\n",
+        "1.tokenizer convert text --> tokensIDs creating attention marks\n",
+        "\n",
+        "2.return_tensor='pt' return data as PyTorch which are requred bu the model\n",
+        "\n",
+        "3.output[0][0] = Accesses the first set of logits for the input.\n",
+        "\n",
+        "4.detach() =Detaches the tensor from the computational graph to prevent gradient computation.\n",
+        "\n",
+        "5.numpy(): Converts the tensor into a NumPy array for easier manipulation.\n",
+        "\n",
+        "6.softmax(scores): Ensures that the scores sum to 1, representing the likelihood of each sentiment class (negative, neutral, positive).\n"
+      ],
+      "metadata": {
+        "id": "40exUSFCoDzV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Apply to whole **dataset**"
+      ],
+      "metadata": {
+        "id": "lwfGpPsGuVwl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UWGqD5MitfKl"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
