--- a/Sentimental_Analiziz.ipynb
+++ b/Sentimental_Analiziz.ipynb
@@ -2555,10 +2555,86 @@
       }
     },
     {
+      "source": [
+        "from scipy.special import softmax\n",
+        "\n",
+        "def polarity_scores_roberta(text):\n",
+        "    \"\"\"\n",
+        "    Calculates polarity scores for a given text using the RoBERTa model.\n",
+        "\n",
+        "    Args:\n",
+        "        text (str): The text to analyze.\n",
+        "\n",
+        "    Returns:\n",
+        "        dict: A dictionary containing the RoBERTa sentiment scores.\n",
+        "    \"\"\"\n",
+        "    encoded_text = tokenizer(text, return_tensors='pt')\n",
+        "    output = model(**encoded_text)\n",
+        "    scores = output[0][0].detach().numpy()\n",
+        "    scores = softmax(scores)\n",
+        "    scores_dict = {\n",
+        "        'roberta_neg': scores[0],\n",
+        "        'roberta_neu': scores[1],\n",
+        "        'roberta_pos': scores[2]\n",
+        "    }\n",
+        "    return scores_dict\n",
+        "\n",
+        "res = {}\n",
+        "\n",
+        "for i, row in tqdm(df.iterrows(), total=len(df)):\n",
+        "    try:\n",
+        "        text = row['Text']\n",
+        "        myid = row['Id']\n",
+        "        vader_result = sia.polarity_scores(text)\n",
+        "        vader_result_rename = {}  # Initialize vader_result_rename here\n",
+        "\n",
+        "        for key, value in vader_result.items():\n",
+        "            vader_result_rename[f\"vader_{key}\"] = value  # Use vader_result_rename\n",
+        "\n",
+        "        roberta_result = polarity_scores_roberta(text)\n",
+        "        both = {**vader_result_rename, **roberta_result}  # Use vader_result_rename\n",
+        "        res[myid] = both\n",
+        "    except RuntimeError:\n",
+        "        print(f'Broke for id {myid}')"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "txtQnGEJ0TOF",
+        "outputId": "ffb81451-5867-4a1a-f0d9-d385df5b4ed2"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 91%|█████████▏| 4954/5419 [21:34<01:16,  6.10it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Broke for id 18321\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 5419/5419 [23:40<00:00,  3.82it/s]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "UWGqD5MitfKl"
+        "id": "8QHqBX5Tv_B1"
       },
       "execution_count": null,
       "outputs": []
